include/maplibre_native_c/runtime.h

/** Offline database operation token. Zero is never a valid operation ID. */
typedef uint64_t mln_offline_operation_id;
/**
 * Reads MapLibre Native's process-global network status.
 *
 * On success, out_status receives a mln_network_status value.
 *
 * Returns:
 * - MLN_STATUS_OK on success.
 * - MLN_STATUS_INVALID_ARGUMENT when out_status is null.
 * - MLN_STATUS_NATIVE_ERROR when an internal exception is converted to status.
 */
MLN_API mln_status mln_network_status_get(uint32_t* out_status) MLN_NOEXCEPT;
/**
 * Sets MapLibre Native's process-global network status.
 *
 * MLN_NETWORK_STATUS_ONLINE allows HTTP and HTTPS requests and wakes native
 * subscribers when transitioning from offline. MLN_NETWORK_STATUS_OFFLINE makes
 * MapLibre's online source stop starting network requests until reachability
 * returns. Runtime-scoped resource configuration is unchanged.
 *
 * Returns:
 * - MLN_STATUS_OK on success.
 * - MLN_STATUS_INVALID_ARGUMENT when status is not a mln_network_status value.
 * - MLN_STATUS_NATIVE_ERROR when an internal exception is converted to status.
 */
MLN_API mln_status mln_network_status_set(uint32_t status) MLN_NOEXCEPT;
typedef struct mln_runtime_options {
  uint32_t size;
  uint32_t flags;
  /** Filesystem root for asset:// URLs. Copied during runtime creation. */
  const char* asset_path;
  /** Cache database path. Copied during runtime creation. */
  const char* cache_path;
  /** Maximum ambient cache size in bytes when the matching flag is set. */
  uint64_t maximum_cache_size;
} mln_runtime_options;
/** Event payload returned by mln_runtime_poll_event(). */
typedef struct mln_runtime_event {
  uint32_t size;
  uint32_t type;
  /** One of mln_runtime_event_source_type. */
  uint32_t source_type;
  /**
   * Source handle for this event: the mln_map for map-originated events, the
   * mln_runtime for runtime-originated events, selected by source_type. Every
   * handle type is uint64_t, so this needs no cast.
   *
   * The value names one object for the life of the process, so a host may
   * compare it against a handle it holds even after that handle is released.
   */
  uint64_t source;
  /**
   * Secondary event detail whose meaning type selects. Depending on type it
   * carries an mln_camera_change_mode, an mln_status, a MapLibre Native error
   * ordinal, or 0. See mln_runtime_event_type for the per-type meaning.
   */
  int32_t code;
  /** One of mln_runtime_event_payload_type. */
  uint32_t payload_type;
  /** Borrowed payload selected by payload_type. Null when payload_size is 0. */
  const void* payload;
  /** Number of bytes in payload. */
  size_t payload_size;
  /** Borrowed event message bytes. Null when message_size is 0. */
  const char* message;
  /** Number of bytes in message, excluding the trailing null terminator. */
  size_t message_size;
} mln_runtime_event;
typedef struct mln_resource_transform_response {
  uint32_t size;
  /** Replacement URL. Null or empty keeps the original URL. Copied on return.
   */
  const char* url;
  /** C API-managed callback context. Callback implementations leave unchanged.
   */
  void* context;
} mln_resource_transform_response;
/**
 * Copies a replacement URL into C API-managed storage for the current callback.
 *
 * Use this helper inside mln_resource_transform_callback implementations to set
 * out_response->url from temporary host-language storage. The copied URL stays
 * valid until the current resource transform invocation finishes. Empty input
 * clears the replacement URL.
 *
 * Returns MLN_STATUS_INVALID_ARGUMENT when response is null, response->size is
 * too small, url is null with a non-zero size, or url contains embedded NUL.
 * Returns MLN_STATUS_INVALID_STATE when called outside a resource transform
 * callback.
 */
MLN_API mln_status mln_resource_transform_response_set_url(
  mln_resource_transform_response* response, const char* url, size_t url_size
) MLN_NOEXCEPT;
/**
 * Rewrites a network resource URL.
 *
 * This callback can only replace the request URL. It cannot mutate headers,
 * bodies, cache policy, or convert a request into an error.
 *
 * Callback invocations follow these rules:
 *
 * - MapLibre may invoke the callback on a worker or network thread instead of
 *   the runtime owner thread.
 * - The callback must be thread-safe, return quickly, and must not call C API
 *   functions other than mln_resource_transform_response_set_url().
 * - url and out_response are borrowed for the callback duration.
 * - Use mln_resource_transform_response_set_url() to set a replacement URL from
 *   temporary host-language storage. The helper copies the URL into C
 *   API-managed storage for the current transform invocation.
 * - A non-OK return status is treated as no rewrite and does not fail the
 *   resource request.
 * - The callback and user_data must remain valid until the transform is
 *   replaced, cleared, or the runtime is destroyed. Those calls wait for
 *   in-flight transform callbacks before returning.
 */
typedef mln_status (*mln_resource_transform_callback)(
  void* user_data, uint32_t kind, const char* url,
  mln_resource_transform_response* out_response
);
typedef struct mln_resource_transform {
  uint32_t size;
  mln_resource_transform_callback callback;
  void* user_data;
} mln_resource_transform;
typedef struct mln_resource_request {
  uint32_t size;
  const char* url;
  uint32_t kind;
  uint32_t loading_method;
  uint32_t priority;
  uint32_t usage;
  uint32_t storage_policy;
  bool has_range;
  uint64_t range_start;
  uint64_t range_end;
  bool has_prior_modified;
  int64_t prior_modified_unix_ms;
  bool has_prior_expires;
  int64_t prior_expires_unix_ms;
  const char* prior_etag;
  const uint8_t* prior_data;
  size_t prior_data_size;
} mln_resource_request;
typedef struct mln_resource_response {
  uint32_t size;
  uint32_t status;
  uint32_t error_reason;
  /** Response bytes. May be null only when byte_count is 0. */
  const uint8_t* bytes;
  size_t byte_count;
  const char* error_message;
  bool must_revalidate;
  bool has_modified;
  int64_t modified_unix_ms;
  bool has_expires;
  int64_t expires_unix_ms;
  const char* etag;
  bool has_retry_after;
  int64_t retry_after_unix_ms;
} mln_resource_response;
/**
 * Intercepts a network resource request.
 *
 * The callback runs synchronously on the thread that reaches the C API network
 * file source. That thread may be a MapLibre worker or network thread instead
 * of the runtime owner thread.
 *
 * Request handling follows these rules:
 *
 * - request and its pointed-to fields are borrowed for the callback duration.
 * - MLN_RESOURCE_PROVIDER_DECISION_PASS_THROUGH lets native OnlineFileSource
 *   handle the request.
 * - After returning PASS_THROUGH, the provider must not retain, complete, or
 *   release the handle.
 * - MLN_RESOURCE_PROVIDER_DECISION_HANDLE lets the provider complete the
 *   request through the handle inline or later.
 * - A callback that returns HANDLE may release the handle during the callback.
 *   The C API defers that release until the callback returns.
 * - Unknown decision values produce a provider error response. The C API
 *   releases the provided handle and does not pass the request through.
 * - The C API copies completion data, and mln_resource_request_complete() may
 *   be called from any thread.
 * - Providers must release handled request handles after they no longer need to
 *   complete or observe cancellation.
 * - The callback must be thread-safe, return quickly, and must not call map or
 *   runtime C API functions.
 * - The callback may call resource request handle functions for the provided
 *   handle.
 */
typedef uint32_t (*mln_resource_provider_callback)(
  void* user_data, const mln_resource_request* request,
  mln_resource_request_handle handle
);
typedef struct mln_resource_provider {
  uint32_t size;
  mln_resource_provider_callback callback;
  void* user_data;
} mln_resource_provider;
/**
 * Returns runtime options initialized for this C API version.
 */
MLN_API mln_runtime_options mln_runtime_options_default(void) MLN_NOEXCEPT;
/**
 * Creates a runtime handle.
 *
 * The creating thread becomes the runtime owner thread. Each owner thread may
 * hold one live runtime.
 *
 * Returns:
 * - MLN_STATUS_OK on success.
 * - MLN_STATUS_INVALID_ARGUMENT when out_runtime is null, *out_runtime is not
 *   null, or options has an unsupported size or flags.
 * - MLN_STATUS_INVALID_STATE when the current thread already owns a live
 *   runtime.
 * - MLN_STATUS_NATIVE_ERROR when an internal exception is converted to status.
 */
MLN_API mln_status mln_runtime_create(
  const mln_runtime_options* options, mln_runtime* out_runtime
) MLN_NOEXCEPT;
/**
 * Registers or replaces a runtime-scoped network resource provider.
 *
 * It is invoked for requests that reach the C API network file source. Built-in
 * non-network schemes such as file, asset, mbtiles, and pmtiles are handled by
 * native MainResourceLoader before this extension point.
 *
 * This call may replace an existing provider while maps exist. The callback and
 * user_data are stored by reference and must remain valid until this call
 * returns having replaced them, mln_runtime_clear_resource_provider() returns,
 * or the runtime is destroyed. When this call returns, no in-flight request can
 * still invoke the previous provider. Requests the previous provider already
 * took a handle for keep that handle: complete and release each one as usual.
 * Native OnlineFileSource claims every remaining scheme, so a URL with a
 * scheme MapLibre does not recognize, such as jar:file:, is treated as a
 * network request, reaches this callback, and completes as an HTTP error when
 * the provider passes it through. Hosts use this extension point to serve
 * those schemes from host storage.
 *
 * Returns:
 * - MLN_STATUS_OK on success.
 * - MLN_STATUS_INVALID_ARGUMENT when runtime is null or not live, provider is
 *   null, provider->size is too small, or callback is null.
 * - MLN_STATUS_WRONG_THREAD when called from a thread other than the runtime
 *   owner thread.
 * - MLN_STATUS_NATIVE_ERROR when an internal exception is converted to status.
 */
MLN_API mln_status mln_runtime_set_resource_provider(
  mln_runtime runtime, const mln_resource_provider* provider
) MLN_NOEXCEPT;
/**
 * Completes a C API resource provider request.
 *
 * This function may be called inline from the provider callback or later from
 * any thread. The C API copies all response bytes and strings before returning.
 *
 * Completion is one-shot. A second completion, completion after cancellation,
 * or completion with null arguments returns a non-OK status and does not invoke
 * MapLibre's resource callback. Malformed response contents are converted to
 * provider error responses and still consume the completion.
 *
 * Returns:
 * - MLN_STATUS_OK when the response was accepted for asynchronous delivery.
 * - MLN_STATUS_INVALID_ARGUMENT when handle or response is null.
 * - MLN_STATUS_INVALID_STATE when the request was cancelled, already completed,
 *   or can no longer accept a response.
 * - MLN_STATUS_NATIVE_ERROR when an internal exception is converted to status.
 */
MLN_API mln_status mln_resource_request_complete(
  mln_resource_request_handle handle, const mln_resource_response* response
) MLN_NOEXCEPT;
/**
 * Reports whether MapLibre has cancelled a C API resource provider request.
 *
 * This function may be called from any thread while the provider still owns the
 * handle. A cancelled request no longer wants a response; later completion is
 * ignored with MLN_STATUS_INVALID_STATE.
 *
 * Returns:
 * - MLN_STATUS_OK on success.
 * - MLN_STATUS_INVALID_ARGUMENT when handle or out_cancelled is null.
 */
MLN_API mln_status mln_resource_request_cancelled(
  mln_resource_request_handle handle, bool* out_cancelled
) MLN_NOEXCEPT;
/**
 * Releases the provider's reference to a resource request handle.
 *
 * Release the handle exactly once after completing the request or deciding not
 * to complete it. A provider callback that returns
 * MLN_RESOURCE_PROVIDER_DECISION_HANDLE may release the handle inline. Passing
 * MLN_HANDLE_NULL is a no-op, as is passing a handle this call already
 * released. A released handle reports MLN_STATUS_INVALID_ARGUMENT from every
 * other request entry point, including from a copy another thread holds.
 */
MLN_API void mln_resource_request_release(
  mln_resource_request_handle handle
) MLN_NOEXCEPT;
/**
 * Registers or updates a runtime-scoped URL transform for network resources.
 *
 * It is forwarded to MapLibre's OnlineFileSource, so it applies wherever native
 * OnlineFileSource applies transforms, including nested PMTiles network range
 * requests. It does not apply to file, asset, database, MBTiles, or registered
 * C API provider responses intercepted before OnlineFileSource.
 *
 * This call may replace an existing transform while maps exist. When it
 * returns, no in-flight request can still invoke the previous transform.
 *
 * Returns:
 * - MLN_STATUS_OK on success.
 * - MLN_STATUS_INVALID_ARGUMENT when runtime is null or not live, transform is
 *   null, transform->size is too small, or callback is null.
 * - MLN_STATUS_WRONG_THREAD when called from a thread other than the runtime
 *   owner thread.
 * - MLN_STATUS_NATIVE_ERROR when an internal exception is converted to status.
 */
MLN_API mln_status mln_runtime_set_resource_transform(
  mln_runtime runtime, const mln_resource_transform* transform
) MLN_NOEXCEPT;
/**
 * Clears the runtime-scoped URL transform for network resources.
 *
 * After this call succeeds, network resource URLs pass through unchanged. When
 * it returns, no in-flight request can still invoke the previous transform.
 *
 * Returns:
 * - MLN_STATUS_OK on success.
 * - MLN_STATUS_INVALID_ARGUMENT when runtime is null or not live.
 * - MLN_STATUS_WRONG_THREAD when called from a thread other than the runtime
 *   owner thread.
 * - MLN_STATUS_NATIVE_ERROR when an internal exception is converted to status.
 */
MLN_API mln_status
mln_runtime_clear_resource_transform(mln_runtime runtime) MLN_NOEXCEPT;
/**
 * Starts a MapLibre ambient cache maintenance operation for this runtime.
 *
 * When runtime options omit cache_path, this operates on MapLibre's default
 * in-memory database and its effects are not durable beyond the native database
 * lifetime. Completion is reported through
 * MLN_RUNTIME_EVENT_OFFLINE_OPERATION_COMPLETED.
 *
 * Returns:
 * - MLN_STATUS_OK when the operation was accepted and out_operation_id was set.
 * - MLN_STATUS_INVALID_ARGUMENT when runtime is null or not live, or operation
 *   is not a mln_ambient_cache_operation value, or out_operation_id is null.
 * - MLN_STATUS_WRONG_THREAD when called from a thread other than the runtime
 *   owner thread.
 * - MLN_STATUS_NATIVE_ERROR when an internal exception is converted to status.
 */
MLN_API mln_status mln_runtime_run_ambient_cache_operation_start(
  mln_runtime runtime, uint32_t operation,
  mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
/**
 * Discards runtime-owned state for an offline database operation.
 *
 * Discarding does not cancel native database work. It drops stored results,
 * removes queued completion events for the operation, and suppresses later
 * completion delivery when the native operation is still pending.
 *
 * Returns:
 * - MLN_STATUS_OK on success.
 * - MLN_STATUS_INVALID_ARGUMENT when runtime is null or not live, or
 *   operation_id is zero or unknown.
 * - MLN_STATUS_WRONG_THREAD when called from a thread other than the runtime
 *   owner thread.
 * - MLN_STATUS_NATIVE_ERROR when an internal exception is converted to status.
 */
MLN_API mln_status mln_runtime_offline_operation_discard(
  mln_runtime runtime, mln_offline_operation_id operation_id
) MLN_NOEXCEPT;
/**
 * Destroys a runtime handle.
 *
 * The runtime must no longer own live maps.
 *
 * When a resource transform is registered, this call waits for in-flight
 * transform callbacks before returning, the same way
 * mln_runtime_set_resource_transform() and
 * mln_runtime_clear_resource_transform() do. The callback contract documented
 * on mln_resource_transform_callback keeps that wait short: the callback
 * returns quickly and calls no C API function other than
 * mln_resource_transform_response_set_url().
 *
 * A registered resource provider is waited on the same way: this call blocks
 * until every in-flight mln_resource_provider_callback invocation returns,
 * matching mln_runtime_set_resource_provider() and
 * mln_runtime_clear_resource_provider(). The callback and its user_data stay
 * valid until that point and are unreferenced once this call returns, so a
 * host frees provider-owned state only after it does.
 *
 * Both waits run with no runtime-internal lock that other runtimes need, so a
 * slow callback delays only this runtime. Do not call this while holding a
 * host lock that a provider or transform callback also acquires; the callback
 * cannot finish, and this call cannot return.
 *
 * Returns:
 * - MLN_STATUS_OK on success.
 * - MLN_STATUS_INVALID_ARGUMENT when runtime is null or not a live runtime
 *   handle.
 * - MLN_STATUS_INVALID_STATE when runtime still owns live maps.
 * - MLN_STATUS_WRONG_THREAD when called from a thread other than the creating
 *   thread.
 * - MLN_STATUS_NATIVE_ERROR when an internal exception is converted to status.
 */
MLN_API mln_status mln_runtime_destroy(mln_runtime runtime) MLN_NOEXCEPT;
/**
 * Pops the next queued runtime event.
 *
 * On success, *out_event is reset and *out_has_event indicates whether an event
 * was available. When an event is available, *out_event receives it.
 * Map-originated events set out_event->source_type to
 * MLN_RUNTIME_EVENT_SOURCE_MAP and out_event->source to the source map.
 * Runtime-originated events set out_event->source_type to
 * MLN_RUNTIME_EVENT_SOURCE_RUNTIME.
 *
 * When an event is available, out_event->payload points to runtime-owned
 * storage containing a struct selected by out_event->payload_type, or null when
 * the payload type is MLN_RUNTIME_EVENT_PAYLOAD_NONE. String pointers inside
 * typed payloads and out_event->message remain valid until the next
 * mln_runtime_poll_event() call for the same runtime or until the runtime is
 * destroyed. Copy those bytes before then when they must outlive that window.
 * For style-image-missing and tile-action events, out_event->message contains
 * the same ID string exposed by the typed payload.
 *
 * out_event->code carries a secondary detail whose meaning out_event->type
 * selects. mln_runtime_event_type lists the meaning for every event type.
 *
 * Destroying a map discards that map's queued events, so this function returns
 * events only for maps that are still live. Read the state a host mirrors from
 * events before destroying the map that produces them.
 *
 * Returns:
 * - MLN_STATUS_OK when the poll completed; out_has_event indicates whether an
 *   event was written to out_event.
 * - MLN_STATUS_INVALID_ARGUMENT when runtime is null or not live, out_event is
 *   null, out_has_event is null, or out_event->size is too small.
 * - MLN_STATUS_WRONG_THREAD when called from a thread other than the runtime
 *   owner thread.
 * - MLN_STATUS_NATIVE_ERROR when an internal exception is converted to status.
 */
MLN_API mln_status mln_runtime_poll_event(
  mln_runtime runtime, mln_runtime_event* out_event, bool* out_has_event
) MLN_NOEXCEPT;