bindings/dotnet/src/Maplibre.Native/Generated/runtime.g.cs


  internal unsafe partial struct mln_resource_request
  {
    [NativeTypeName("uint32_t")]
    public uint size;

    [NativeTypeName("const char *")]
    public sbyte* url;

    [NativeTypeName("uint32_t")]
    public uint kind;

    [NativeTypeName("uint32_t")]
    public uint loading_method;

    [NativeTypeName("uint32_t")]
    public uint priority;

    [NativeTypeName("uint32_t")]
    public uint usage;

    [NativeTypeName("uint32_t")]
    public uint storage_policy;

    [NativeTypeName("bool")]
    public byte has_range;

    [NativeTypeName("uint64_t")]
    public ulong range_start;

    [NativeTypeName("uint64_t")]
    public ulong range_end;

    [NativeTypeName("bool")]
    public byte has_prior_modified;

    [NativeTypeName("int64_t")]
    public long prior_modified_unix_ms;

    [NativeTypeName("bool")]
    public byte has_prior_expires;

    [NativeTypeName("int64_t")]
    public long prior_expires_unix_ms;

    [NativeTypeName("const char *")]
    public sbyte* prior_etag;

    [NativeTypeName("const uint8_t *")]
    public byte* prior_data;

    [NativeTypeName("size_t")]
    public nuint prior_data_size;
  }

  internal unsafe partial struct mln_resource_response
  {
    [NativeTypeName("uint32_t")]
    public uint size;

    [NativeTypeName("uint32_t")]
    public uint status;

    [NativeTypeName("uint32_t")]
    public uint error_reason;

    [NativeTypeName("const uint8_t *")]
    public byte* bytes;

    [NativeTypeName("size_t")]
    public nuint byte_count;

    [NativeTypeName("const char *")]
    public sbyte* error_message;

    [NativeTypeName("bool")]
    public byte must_revalidate;

    [NativeTypeName("bool")]
    public byte has_modified;

    [NativeTypeName("int64_t")]
    public long modified_unix_ms;

    [NativeTypeName("bool")]
    public byte has_expires;

    [NativeTypeName("int64_t")]
    public long expires_unix_ms;

    [NativeTypeName("const char *")]
    public sbyte* etag;

    [NativeTypeName("bool")]
    public byte has_retry_after;

    [NativeTypeName("int64_t")]
    public long retry_after_unix_ms;
  }

  internal unsafe partial struct mln_resource_provider
  {
    [NativeTypeName("uint32_t")]
    public uint size;

    [NativeTypeName("mln_resource_provider_callback")]
    public delegate* unmanaged[Cdecl]<void*, mln_resource_request*, mln_resource_request_handle*, uint> callback;

    public void* user_data;
  }

  internal static unsafe partial class NativeMethods
  {
    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_network_status_get([NativeTypeName("uint32_t *")] uint* out_status);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_network_status_set([NativeTypeName("uint32_t")] uint status);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_resource_transform_response_set_url(mln_resource_transform_response* response, [NativeTypeName("const char *")] sbyte* url, [NativeTypeName("size_t")] nuint url_size);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_runtime_options mln_runtime_options_default();

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_runtime_create([NativeTypeName("const mln_runtime_options *")] mln_runtime_options* options, mln_runtime** out_runtime);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_runtime_set_resource_provider(mln_runtime* runtime, [NativeTypeName("const mln_resource_provider *")] mln_resource_provider* provider);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_resource_request_complete(mln_resource_request_handle* handle, [NativeTypeName("const mln_resource_response *")] mln_resource_response* response);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_resource_request_cancelled([NativeTypeName("const mln_resource_request_handle *")] mln_resource_request_handle* handle, bool* out_cancelled);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void mln_resource_request_release(mln_resource_request_handle* handle);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_runtime_set_resource_transform(mln_runtime* runtime, [NativeTypeName("const mln_resource_transform *")] mln_resource_transform* transform);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_runtime_clear_resource_transform(mln_runtime* runtime);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_runtime_run_ambient_cache_operation_start(mln_runtime* runtime, [NativeTypeName("uint32_t")] uint operation, [NativeTypeName("mln_offline_operation_id *")] ulong* out_operation_id);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_runtime_offline_operation_discard(mln_runtime* runtime, [NativeTypeName("mln_offline_operation_id")] ulong operation_id);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_runtime_destroy(mln_runtime* runtime);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_runtime_run_once(mln_runtime* runtime);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_runtime_poll_event(mln_runtime* runtime, mln_runtime_event* out_event, bool* out_has_event);
  }
}
